--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll-to-bottom": "^4.2.0",
     "sass": "^1.64.1",
     "scss": "^0.2.4",
-    "socket.io-client": "^4.7.1"
+    "socket.io-client": "^4.7.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
